2008-09-18  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 427286 - Code
	  Completion: completion done without showing the completion list".

2008-09-18  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 427284 - Code
	  Completion: class list shows the full name of classes".

2008-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CompilerOptionsPanelWidget.cs: Properly store properties in the
	  project configurations. The project's configuration list can't be
	  used because it is duplicated by the properties dialog while it is
	  being edited.
	* Parser/NRefactoryParser.cs: Parse positional and named attribute
	  arguments.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Updated projects.

2008-09-17  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs, Gui/NRefactoryResolver.cs,
	  Gui/CSharpTextEditorCompletion.cs: Fixed code completion issue.

2008-09-17  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Some changes required for unit
	  testing.

2008-09-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/MemberCompletionData.cs: Improve rendering of documentation. The
	  new EscapeText call also fixes bug #416842.

2008-09-16  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs: Removed some debug messages.

2008-09-16  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/NewCSharpExpressionFinder.cs,
	  Gui/CSharpTextEditorCompletion.cs: fixed regression 325081.

2008-09-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: fixed possible null reference exception.

2008-09-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/NewCSharpExpressionFinder.cs, Gui/CSharpTextEditorCompletion.cs:
	  added namespace expression context.

2008-09-15  Mike Krüger <mkrueger@novell.com> 
