@@ -359,7 +359,10 @@ namespace MonoDevelop.CSharpBinding
 				return null;
 			
 			ResolveResult targetResult = Resolve (invocationExpression.TargetObject);
-			
+			MethodResolveResult methodResult = targetResult as MethodResolveResult;
+			if (methodResult != null) {
+				return CreateResult (methodResult.Methods [0].ReturnType);
+			}
 			return targetResult;
 		}
 		
